# sr-index

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  base64.h  bm_build_ri_items.cpp  bm_locate.cpp  bm_locate.h  bm_locate_set.h  build_bm.sh  definitions.h  factory.h  plot_queries.py  run_bm.sh
benchmark/sr-csa/: CMakeLists.txt  bm_construct_csa.cpp  bm_count_csa.cpp  bm_locate_csa.cpp  csa.h  csa_raw.h  factory.h  index_base.h  sr_csa.h
benchmark/sr-index/: CMakeLists.txt  bm_construct_ri.cpp  bm_count_ri.cpp  bm_locate_ri.cpp  factory.h
cmake/: ConfigBigBWT.cmake  ConfigGBenchmark.cmake  ConfigGTest.cmake  ConfigJSON.cmake  ConfigSDSL.cmake  ConfigSafeGuards.cmake  internal_utils.cmake
include/ri/: bwt.h  definitions.hpp  huff_string.hpp  phi.h  predecessor.h  r_index.h  rle_string.hpp  sparse_hyb_vector.hpp  sparse_sd_vector.hpp  tools.h
include/sr-index/: alphabet.h  bwt.h  coder.h  config.h  construct.h  construct_base.h  construct_big_bwt.h  construct_sdsl.h  csa.h  definitions.hpp  enc_vector.hpp  huff_string.hpp  index_base.h  io.h  lf.h  phi.h  predecessor.h  psi.h  r_csa.h  r_index.h  rle_string.hpp  sampling.h  sequence_ops.h  sparse_hyb_vector.hpp  sparse_sd_vector.hpp  sr_csa.h  sr_csa_psi.h  sr_index.h  toehold.h  tools.h
test/: base_tests.h  bwt_tests.cpp  construct_tests.cpp  lf_tests.cpp  locate_tests.cpp  phi_tests.cpp  predecessor_tests.cpp  psi_base_tests.h  psi_tests.cpp  rle_string_tests.cpp  sampling_test.cpp  sequence_ops_tests.cpp  toehold_tests.cpp
tool/: int_vector_to_vector.cpp  plot_marks.py
